--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+select, input {
+  font-family: inherit;
+}
+
+select:focus-visible, input:focus-visible{
+  outline: none;
+}
+
